forth/test/fail/test_dot_call_root_control.af
\ Must fail to compile.
then
